make some changes in home.ejs

--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -43,11 +43,11 @@
         <!-- Login Form -->
         <form action="/admin/login" method="POST" id="admin-login">
             <div class="form-group">
-                <input value="admin@gmail.com" type="email" name="email" placeholder="Email Address" class="form-control" id="adminEmail" required>
+                <input  type="email" name="email" placeholder="Email Address" class="form-control" id="adminEmail" required>
                 <div id="errorEmail" class="error-message">Invalid Email</div>
             </div>
             <div class="form-group">
-                <input value="thanveer123" type="password" name="password" placeholder="Password" class="form-control" id="adminPassword" required>
+                <input  type="password" name="password" placeholder="Password" class="form-control" id="adminPassword" required>
                 <div id="errorPassword" class="error-message">Invalid Password</div>
             </div>
             <button type="submit" class="btn btn-primary">Log In</button>
