--- a/views/user/orderFailure.ejs
+++ b/views/user/orderFailure.ejs
@@ -27,7 +27,7 @@
     <p class="text-center mt-2">Your order hasn't been placed. You can find the order in your orders complete the payment to place the order again.</p>
 </div>
 <div class="text-center">
-    <a href="/view-orders" class="text-dark" id="ClickToViewOrder">
+    <a href="/viewOrders" class="text-dark" id="ClickToViewOrder">
         <i id="continueShopping" class="fas fa-box-open"></i>&nbsp;Click to view your order
     </a>
 </div>
