updation in the whslist page

--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -114,7 +114,7 @@ table td.product-cell a {
 		</div>
 	</div>
   
-    <% if(wishlist.items.length>0){%>
+    <% if(wishlist && wishlist.items && wishlist.items.length>0){%>
     <div class="wishlist-container">
         <table>
             <thead>
